<resources>
    <string name="app_name">nextLvL</string>
    <string name="MB_button">Mobile Games</string>
    <string name="CG_button">Card Games</string>
    <string name="LVL_button">LvL Games</string>
    <string name="DOR_button">Dare Or Drink</string>
    <string name="NHIE_button">Never Have I Ever</string>
    <string name="SelectGameText">Choose a game to play</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="beerpong">Beerpong</string>
    <string name="gasgas">GasGas</string>
    <string name="horserace">Horse Race</string>
    <string name="_321">3–2–1</string>
    <string name="ringoffire">Ring Of Fire</string>
    <string name="fuckthedealer">Fuck The Dealer</string>
    <string name="enter_name">Enter name</string>
    <string name="addplayer">+ Add Player</string>
    <string name="start_game">Start game</string>
    <string name="next">Next</string>
    <string name="currentLang">english</string>
    <string name="dont_like_nhie_dares">"Don't like our Never have i ever/ Dares?\n Submit your own"</string>
    <string name="submit_your_own">Submit your own</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add_submission">AddSubmissionActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="what_is_needded">What is needded</string>
    <string name="setup">Setup</string>
    <string name="how_to_play">How to play</string>
    <string name="this_is_the_admin_panel_nwhat_would_you_like_to_do_today">This is the admin panel!\nWhat would you like to do today?</string>
    <string name="manage_games">Manage games</string>
    <string name="new_submissions">New Submissions</string>
    <string name="logout">Logout</string>

    <string name="reminderTitle">Set a party reminder</string>
    <string name="reminderLinkText">Make sure you don´t miss playing some NextLvL by setting a party game reminder here!</string>
    <string name="reminderDescription">Here you can select a time today when you want to be reminded to play some NextLvL. Enable the timer and we will send you a notification at the selected time!</string>

    <string name="dare_or_drink_suggestions">Dare Or Drink-suggestions:</string>
    <string name="never_have_i_ever_suggestions">Never Have I Ever-suggestions:</string>
    <string name="i_want_to_submit_a">"I want to submit a "</string>
    <string name="submit">Submit</string>
    <string name="dismiss">Dismiss</string>

    <string name="enter_translation">Enter translation</string>
    <string name="swedish">Swedish</string>
    <string name="english">English</string>

    <string name="nextlvl">nextLvL</string>
    <string name="reminder_notification_text">"We miss you! Don't forget to play some nextLvL to make sure you have the best party possible!"</string>

    <string name="submission">Submission</string>
    <string name="submission_edit_popup_message">Choose what you want to do with this submission</string>
    <string name="remove">Remove</string>
    <string name="edit_submit">Edit/Submit</string>
    <string name="submission_please_select_a_game">Please select a game</string>
    <string name="submission_placeholder_dare_or_drink">Enter a dare</string>
    <string name="submission_placeholder_never_have_i_ever">Enter a Never have i ever-statement</string>
    <string name="dare_or_drink_example">Ex: "Player1, let Player2 use your facebook account for 1 minute, or drink 3 sips"</string>
    <string name="never_have_i_ever_example">Ex: "Never have i ever driven over the speed limit"</string>
    
    <!-- ErrorMessage Strings -->
    <string name="error">Error</string>
    <string name="back">Back</string>
    <string name="db_error_message">Error communicating with the database, please try again</string>

    <string-array name="gameArray">
        <item>Dare or drink</item>
        <item>Never have i ever</item>
    </string-array>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="widget_text">Hello my man</string>
    <string name="widget_title">3-2-1</string>
    <string name="widget_description">3-2-1 is a card drinking game where players nominate each other to drink while taking turns to flip cards from the pyramid over.</string>
    <string name="widget_title1">Equipment</string>
    <string name="widget_text1">Card deck \n\nTable to play on \n\nA drink of your choice</string>
    <string name="widget_title2">Setup</string>
    <string name="widget_text2">Set up the cards into a flat pyramid shape 4-3-2-1 on the table. Then hand out three cards to each player. Then make sure to choose one person who will act as a human timer.</string>




</resources>