<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrepareDareOrDrinkActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:gravity="center">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/nextlvl_logo" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="10dp"
            android:drawablePadding="10dp"
            android:ems="10"
            android:background="@drawable/rounded_edittext"
            android:backgroundTint="@color/black"
            android:hint="@string/enter_name"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="12dp" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/addplayer"
            android:background="@drawable/rounded_button"
            android:textSize="12dp"
            android:textAllCaps="false"
            android:layout_marginBottom="170dp"/>

        <Button
            android:id="@+id/button5"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/start_game"
            android:background="@drawable/rounded_button"
            android:textSize="14dp"
            android:textAllCaps="false"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>