<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LvLGamesActivity"
    android:background="@drawable/games_black_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/card_games_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_game_text"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:layout_marginBottom="80dp"/>

        <Button
            android:id="@+id/beerpong_button"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:text="@string/beerpong"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:background="@drawable/rounded_button"
            android:layout_marginBottom="40dp"/>

        <Button
            android:id="@+id/gasgas_button"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:text="@string/gasgas"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:background="@drawable/rounded_button"
            android:layout_marginBottom="40dp"/>

        <Button
            android:id="@+id/horse_race_button"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:text="@string/horserace"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:background="@drawable/rounded_button"
            android:layout_marginBottom="40dp"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/card_games_nextlvl_logo_imageview"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/nextlvl_logo" />
</androidx.constraintlayout.widget.ConstraintLayout>